Spring Security 登录成功自定义处理器和登录失败自定义处理器完善

--- a/rain-security-rainbow/src/main/resources/application.yml
+++ b/rain-security-rainbow/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     username: root
     password: root
     url: jdbc:mysql://localhost/rain-security?characterEncoding=utf-8&useSSL=false
-  # Session 禁用
+# Session 禁用
   session:
     store-type: none
 
@@ -13,9 +13,10 @@ spring:
 #  basic:
 #    enabled: false
 
-
-rainbow:
-  security:
-    browser:
-      loginPage: /rain-signUp.html
+# 自定义登录的配置项
+#rainbow:
+#  security:
+#    browser:
+#      loginPage: /rain-signUp.html
+#      loginType: REDIRECT Or JSON
 
