Security属性配置类的结构的整理和重构

--- a/rain-security-rainbow/src/main/resources/application.yml
+++ b/rain-security-rainbow/src/main/resources/application.yml
@@ -30,8 +30,9 @@ spring:
 # 自定义登录的验证码类型
 #    code:
 #      image:
-#         length:
-#         width:
+#         length: 6
+#         width: 200
+#         height:
 #         url:
 #      sms:
 #
