Security属性配置类的结构的整理和重构

--- a/rain-security-rainbow/src/main/resources/application.yml
+++ b/rain-security-rainbow/src/main/resources/application.yml
@@ -35,4 +35,8 @@ spring:
 #         height:
 #         url:
 #      sms:
-#
+#         length:
+#         url:
+#    social:
+#      qq:
+#      weixin:
