项目Travis失败，缺少Redis组件，修改配置文件

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,10 @@ before_install:
    - "echo skipped"
 install:
   - "echo skipped"
+services:
+  - redis-server
+  - mongodb
+  - memcached
 script:
 #  - "echo skipped"
   - mvn install -Dmaven.javadoc.skip=true
