OAuth项目重构短信、社交、用户名密码等登录方式

--- a/rain-security-rainbow/pom.xml
+++ b/rain-security-rainbow/pom.xml
@@ -19,9 +19,15 @@
 
     <dependencies>
 
-        <dependency>
+        <!--<dependency>
             <groupId>com.jhon</groupId>
             <artifactId>rain-security-browser</artifactId>
+            <version>${jhon.rain.security}</version>
+        </dependency>-->
+
+        <dependency>
+            <groupId>com.jhon</groupId>
+            <artifactId>rain-security-app</artifactId>
             <version>${jhon.rain.security}</version>
         </dependency>
 
