--- a/rain-security-rainbow/src/main/resources/application.yml
+++ b/rain-security-rainbow/src/main/resources/application.yml
@@ -49,3 +49,11 @@ rainbow:
       weixin:
         app-id: wxd99431bbff8305a0
         app-secret: 60f78681d063590a469f1b297feff3c4
+
+# 配置应用的Id和Secret
+security:
+  oauth2:
+    client:
+      client-id: rainbow
+      client-secret: rainbow-secret
+
