--- a/rain-security-rainbow/src/main/resources/application.yml
+++ b/rain-security-rainbow/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     password: root
     url: jdbc:mysql://localhost/rain-security?characterEncoding=utf-8&useSSL=false
 
-# Session 禁用
+# Session 存储在Redis中【redis使用了默认的配置】
   session:
     store-type: redis
 
@@ -40,6 +40,8 @@ rainbow:
 #      sms:
 #         length:
 #         url:
+
+# 社交登录的配置
     social:
       qq:
         app-id: 1106499826
@@ -50,10 +52,21 @@ rainbow:
         app-id: wxd99431bbff8305a0
         app-secret: 60f78681d063590a469f1b297feff3c4
 
-# 配置应用的Id和Secret
-security:
-  oauth2:
-    client:
-      client-id: rainbow
-      client-secret: rainbow-secret
+# OAuth2的令牌自定义配置
+    oauth:
+      clients[0]:
+        clientId: rainbow
+        clientSecret: rainbow-secret
+        accessTokenValiditySeconds: 7200
+      clients[1]:
+        clientId: jhon
+        clientSecret: rain
+        #accessTokenValiditySeconds: 3600
+
+# 配置应用的Id和Secret[上面配置了的话，这里的默认配置就失效了]
+#security:
+#  oauth2:
+#    client:
+#      client-id: rainbow
+#      client-secret: rainbow-secret
 
