Spring Security 权限配置的解耦

--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
         <module>rain-security-browser</module>
         <module>rain-security-app</module>
         <module>rain-security-rainbow</module>
+        <module>rain-security-authorized</module>
     </modules>
     <packaging>pom</packaging>
 
