Security实际应用RBAC项目的使用（待完成，持续更新中）

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,8 @@
         <module>rain-security-app</module>
         <module>rain-security-rainbow</module>
         <module>rain-security-authorized</module>
+        <module>rain-security-application-a</module>
+        <module>rain-security-application-b</module>
     </modules>
     <packaging>pom</packaging>
 
